Added JWT usage, db scripts and so on
