# src/main/java/com/example/swapi/controller/UserController.java
@@ -1,10 +1,15 @@
 package com.example.swapi.controller;
 
-import com.example.model.User;
+
 import com.example.swapi.UserApi;
+import com.example.swapi.model.User;
+import com.example.swapi.service.UserService;
+import com.example.swapi.utils.JwtTokenUtil;
+import lombok.AccessLevel;
+import lombok.RequiredArgsConstructor;
+import lombok.experimental.FieldDefaults;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -13,16 +18,21 @@ import javax.validation.Valid;
 
 @RestController()
 @RequestMapping("/api/v1")
+@RequiredArgsConstructor
+@FieldDefaults(makeFinal = true, level = AccessLevel.PRIVATE)
 public class UserController implements UserApi {
+
+    UserService userService;
+    JwtTokenUtil jwtTokenUtil;
 
     @Override
     public ResponseEntity<User> _createUser(@Valid User user) {
-        return new ResponseEntity<>(user, HttpStatus.OK);
+        return new ResponseEntity<>(userService.createUser(user), HttpStatus.OK);
     }
 
     @Override
-    public ResponseEntity<User> _createUsersWithListInput(@Valid List<User> user) {
-        return null;
+    public ResponseEntity<List<User>> _createUsersWithListInput(List<User> user) {
+        return new ResponseEntity<>(userService.createUsersWithListInput(user), HttpStatus.OK);
     }
 
     @Override
@@ -31,15 +41,13 @@ public class UserController implements UserApi {
     }
 
     @Override
-    public ResponseEntity<User> _getUserByName(String username) {
-        User user1 = new User();
-        user1.setUsername(username);
-        return new ResponseEntity<>(user1, HttpStatus.OK);
+    public ResponseEntity<User> _getUserByName(String userName) {
+        return new ResponseEntity<>(userService.getUserByUsername(userName), HttpStatus.OK);
     }
 
     @Override
-    public ResponseEntity<String> _loginUser(@Valid String username, @Valid String password) {
-        return null;
+    public ResponseEntity<String> _authUser(String username, String password) {
+        return new ResponseEntity<>(jwtTokenUtil.generateToken(username), HttpStatus.OK);
     }
 
     @Override
@@ -49,7 +57,8 @@ public class UserController implements UserApi {
 
     @Override
     public ResponseEntity<Void> _updateUser(String username, @Valid User user) {
-        return null;
+        userService.updateUser(username, user);
+        return new ResponseEntity<>(null, HttpStatus.OK);
     }
 
 }
