# src/main/resources/static/api.yaml
@@ -23,68 +23,13 @@ tags:
   - name: User
     description: Operations about user
 paths:
-  /user:
-    post:
-      tags:
-        - User
-      summary: Create user
-      description: This can only be done by the logged in user.
-      operationId: createUser
-      requestBody:
-        description: Created user object
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/User'
-          application/xml:
-            schema:
-              $ref: '#/components/schemas/User'
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: '#/components/schemas/User'
-      responses:
-        default:
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/User'
-            application/xml:
-              schema:
-                $ref: '#/components/schemas/User'
-  /user/createWithList:
-    post:
-      tags:
-        - User
-      summary: Creates list of users with given input array
-      description: Creates list of users with given input array
-      operationId: createUsersWithListInput
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: array
-              items:
-                $ref: '#/components/schemas/User'
-      responses:
-        '200':
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/User'
-            application/xml:
-              schema:
-                $ref: '#/components/schemas/User'
-        default:
-          description: successful operation
-  /user/login:
+  /user/auth:
     get:
       tags:
         - User
-      summary: Logs user into the system
-      description: ''
-      operationId: loginUser
+      summary: Get JWT token by username and password
+      description: 'This mock method returned token for any username and password'
+      operationId: authUser
       parameters:
         - name: username
           in: query
@@ -121,15 +66,80 @@ paths:
                 type: string
         '400':
           description: Invalid username/password supplied
-  /user/logout:
-    get:
+  /user:
+    post:
       tags:
         - User
-      summary: Logs out current logged in user session
-      description: ''
-      operationId: logoutUser
-      parameters: []
+      summary: Create user
+      description: This can only be done by the logged in user.
+      operationId: createUser
+      requestBody:
+        description: Created user object
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+          application/xml:
+            schema:
+              $ref: '#/components/schemas/User'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/User'
       responses:
+        default:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/User'
+# getting all users is unsafe. It just one example how get list of objects.
+#  /user/list:
+#    get:
+#      tags:
+#        - User
+#      summary: List of users
+#      description: Get list of users.
+#      operationId: getUsers
+#      responses:
+#        '200':
+#          description: Successful operation
+#          content:
+#            application/json:
+#              schema:
+#                type: array
+#                items:
+#                  $ref: '#/components/schemas/User'
+#            application/xml:
+#              schema:
+#                $ref: '#/components/schemas/User'
+#        default:
+#          description: successful operation
+  /user/createWithList:
+    post:
+      tags:
+        - User
+      summary: Creates list of users with given input array
+      description: Creates list of users with given input array
+      operationId: createUsersWithListInput
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: array
+              items:
+                $ref: '#/components/schemas/User'
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/User'
         default:
           description: successful operation
   /user/{username}:
@@ -192,7 +202,7 @@ paths:
       tags:
         - User
       summary: Delete user
-      description: This can only be done by the logged in user.
+      description: Not available yet. This can only be done by the logged in user.
       operationId: deleteUser
       parameters:
         - name: username
@@ -206,40 +216,67 @@ paths:
           description: Invalid username supplied
         '404':
           description: User not found
+  /user/logout:
+    get:
+      tags:
+        - User
+      summary: Logout method. Adds current token to blacklist
+      description: 'Not available yet'
+      operationId: logoutUser
+      parameters: [ ]
+      responses:
+        default:
+          description: successful operation
 components:
   schemas:
     User:
       type: object
+      x-class-extra-annotation: "@javax.persistence.Entity
+      \n@javax.persistence.Table(name = \"users\")"
+      required:
+        - username
       properties:
         id:
           type: integer
+          x-field-extra-annotation: "@javax.persistence.Id
+          \n  @javax.persistence.GeneratedValue(strategy=javax.persistence.GenerationType.AUTO)
+          \n  @javax.persistence.Column(name = \"id\")"
           format: int64
-          example: 10
+#          example: 10
+          x-jpa-id: true
         username:
           type: string
-          example: theUser
+#          example: theUser
         firstName:
           type: string
-          example: John
+#          example: John
         lastName:
           type: string
-          example: James
+#          example: James
         email:
           type: string
-          example: john@email.com
+#          example: john@email.com
         password:
           type: string
-          example: '12345'
+#          example: '12345'
         phone:
           type: string
-          example: '12345'
+#          example: '+0123456789'
         userStatus:
           type: integer
           description: User Status
           format: int32
-          example: 1
+#          example: 1
       xml:
         name: user
+      example:
+        username: theUser
+        firstName: John
+        lastName: James
+        email: john@email.com
+        password: '1234567'
+        phone: '+0123456789'
+        userStatus: 1
   requestBodies:
     UserArray:
       description: List of user object
@@ -250,15 +287,13 @@ components:
             items:
               $ref: '#/components/schemas/User'
   securitySchemes:
-    petstore_auth:
-      type: oauth2
-      flows:
-        implicit:
-          authorizationUrl: https://petstore3.swagger.io/oauth/authorize
-          scopes:
-            write:pets: modify pets in your account
-            read:pets: read your pets
-    api_key:
-      type: apiKey
-      name: api_key
-      in: header
+    bearerAuth: # arbitrary name for the security scheme
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
+  responses:
+    UnauthorizedError:
+      description: Access token is missing or invalid
+
+security:
+  - bearerAuth: [ ]
